# conan

./: README.md  hybrid_self_improvement_training_plan.md  pyproject.toml
examples/: external_evaluator.py  external_generator.py  external_trainer.py  identity_provider_oidc.json  identity_provider_oidc_auth_code.json  identity_provider_static.json  model_services.json  review_permissions.json  review_permissions_identity.json  runtime_config.json  task_dataset.json
src/hybrid_trainer/: __init__.py  active_learning.py  cli.py  command_backend.py  cost.py  curriculum.py  decision_console.py  engine.py  evaluation.py  experiment.py  failure_analysis.py  generation.py  human_review.py  job_orchestration.py  metrics.py  model_service.py  pipeline.py  policy_registry.py  report.py  review_audit.py  (+19 more)
tests/: test_active_learning.py  test_cli.py  test_cli_artifacts.py  test_cost.py  test_curriculum.py  test_dataset_integration.py  test_decision_console.py  test_engine.py  test_experiment_tracker.py  test_external_backends.py  test_failure_analysis.py  test_human_review_and_metrics.py  test_pipeline.py  test_policy_registry.py  test_report.py  test_review_consensus.py  test_review_flow.py  test_review_identity.py  test_review_router.py  test_review_server.py  test_review_session.py  test_review_store.py  test_review_web.py  test_reward_drift.py  test_reward_policy.py  test_runtime_config.py  test_search.py  test_service_orchestration.py  test_state.py  test_strategy.py  test_terminal_ui.py  test_training_execution.py  test_triggers.py  test_verifier.py  test_web_console.py
