[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hybrid-self-improvement-trainer"
version = "0.1.0"
description = "Prototype for hybrid self-improvement training loop"
requires-python = ">=3.10"
dependencies = [
  "asyncpg>=0.29",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
testpaths = ["tests"]

[project.scripts]
hybrid-trainer = "hybrid_trainer.cli:main"
